Login and Signup API Integrate
Login and Signup API Integrate

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Coursry, Quality IT learners, & start your journey to success Data Science Cyber Security Software Testing Cloud Computing Many More IT courses & enhance your skills."
     />
+    <meta name="csrf-token" content="{{ csrf_token() }}">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
